jwt token expiry handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.servelet.multipart.max-file-size=512KB
 spring.servelet.multipart.max-request-size=512KB
 
+auth.jwt.ttl=3600
+auth.jwt.secret=secretverve
+
 logging.level.org.springframework.web=DEBUG
 
 spring.jackson.default-property-inclusion=non_null
