image and account caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,13 @@ spring.datasource.password=izanagi
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.servelet.multipart.max-file-size=512KB
 spring.servelet.multipart.max-request-size=512KB
-
 auth.jwt.ttl=3600
 auth.jwt.secret=secretverve
-
-logging.level.org.springframework.web=DEBUG
-
+#logging.level.org.springframework.web=DEBUG
 spring.jackson.default-property-inclusion=non_null
-
 #spring.jpa.properties.hibernate.format_sql=true
-
 # properties below are for mail dev
 #spring.mail.host=localhost
 #spring.mail.port=1025
